Fix videos on mobile display

--- a/style.css
+++ b/style.css
@@ -74,6 +74,12 @@ h1 {
   right: 2.5rem;
 }
 
+@media (max-width: 600px) {
+  .videos {
+    height: 50vh;
+  }
+}
+
 .videoLink {
   border: solid;
   border-color: rgba(0, 0, 0, 0);
@@ -87,7 +93,6 @@ h1 {
 }
 
 .photoBio {
-  /* margin-top: 10rem; */
   display: flex;
   justify-content: right;
 }
